[package]
name = "yew-ping-dns"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
gloo-net = "0.6.0"
gloo-timers = { version = "0.3.0", features = ["futures"] } # 用于定时器功能
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlImageElement",
    "HtmlInputElement",
    "Performance",
    "PerformanceTiming"
]}
gloo = "0.10"